# stock-sentiment-analysis-public

./: .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: API.md  API_QUICKSTART.md  ARCHITECTURE.md  index.md
src/stock_sentiment/: __init__.py  app.py
src/stock_sentiment/api/: __init__.py  __main__.py  dependencies.py  main.py
src/stock_sentiment/api/models/: __init__.py  response.py
src/stock_sentiment/api/routes/: cache.py  comparison.py  price.py  sentiment.py  system.py
src/stock_sentiment/config/: __init__.py  settings.py
src/stock_sentiment/models/: __init__.py  sentiment.py  stock.py
src/stock_sentiment/presentation/: api_client.py  data_loader.py  initialization.py  styles.py
src/stock_sentiment/presentation/components/: empty_state.py  sidebar.py
src/stock_sentiment/presentation/tabs/: __init__.py  ai_insights_tab.py  comparison_tab.py  news_sentiment_tab.py  overview_tab.py  price_analysis_tab.py  technical_analysis_tab.py
src/stock_sentiment/services/: __init__.py  cache.py  collector.py  orchestrator.py  rag.py  sentiment.py  vector_db.py
src/stock_sentiment/utils/: __init__.py  circuit_breaker.py  logger.py  preprocessing.py  retry.py  ui_helpers.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_config.py
tests/api/: test_cache_routes.py  test_comparison_routes.py  test_main.py  test_price_routes.py  test_sentiment_routes.py  test_system_routes.py
tests/integration/: __init__.py  test_cache_integration.py  test_service_integration.py
tests/unit/: __init__.py  test_cache.py  test_collector.py  test_edge_cases.py  test_orchestrator.py  test_rag.py  test_sentiment.py  test_validators.py  test_vector_db.py
